// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render 1`] = `
<button
  className="Button"
  style={Object {}}
  type="button"
>
  __BUTTON_NAME__
</button>
`;

exports[`Button should render with transparent 1`] = `
<button
  className="transparent"
  style={Object {}}
  type="button"
>
  __BUTTON_NAME__
</button>
`;
